css/styles.css
/*=========================
       VARIABLES
  =========================*/

:root {
  /* ===== COLORS ===== */
  --color-bg: #ffffff;
  --color-surface: #f8f9fa;

  --color-text-primary: #1f1f1f;
  --color-text-secondary: #555555;
  --color-text-tertiary: #fafafa;

  --color-accent: #2563eb;
  --color-accent-hover: #1d4ed8;

  --color-p: #d2f9d2;
  --color-h: #ffe5b4;

  /* ===== TEXT SIZES ===== */
  --text-xs: 0.725rem;
  --text-sm: 0.875rem;
  --text-nl: 0.95rem;
  --text-md: 1.1rem;
  --text-lg: 1.4rem;
  --text-xl: 1.8rem;

  /* ===== SPACING SCALE ===== */
  --space-2xs: 0.175rem;
  --space-1xs: 0.25rem;
  --space-xs: 0.5rem;
  --space-sm: 1rem;
  --space-nl: 1.5rem;
  --space-md: 2rem;
  --space-lg: 3rem;
  --space-xl: 4rem;
  --space-1xl: 5rem;
  --space-2xl: 6rem;

  /* ===== TYPOGRAPHY ===== */
  --font-primary: 'Outfit', sans-serif;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --font-weight-bold: 700;

  /* ===== RADIUS ===== */
  --radius-sm: 6px;
  --radius-md: 12px;

  /* ===== TRANSITION ===== */
  --transition-smooth: 0.3s ease;
}


/*=========================
       RESET
  =========================*/
  
*, 
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*=========================
       BASE STYLE
  =========================*/

  html {
  font-size: clamp(1rem, 0.5rem + 1vw, 1.5rem);
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-primary);
  color: var(--color-text-primary);
  font-size: var(--text-nl);
  background: linear-gradient( var(--color-bg) 80%, rgba(0, 0, 0, 0.2)); 
  line-height: 1.6;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: var(--font-weight-bold);
  line-height: 1.3;
}

h1 { font-size: var(--text-md);}
h2 { font-size: var(--text-lg);}
h3 { font-size: var(--text-md);}
h4 { font-size: var(--text-nl);}

p {
  color: var(--color-text-secondary);
  margin-bottom: var(--space-sm);
}


section {
  margin-top: var(--space-lg);
  scroll-margin-top: var(--space-xl);
}

aside, footer {
  margin-top: var(--space-md);
  
}

h2 {
  margin-bottom: var(--space-md);
}

h3 {
  margin-bottom: var(--space-nl);
}

img {
      max-width: 100%;
      height: auto;
      display: block;
    }

a {
  padding: var(--space-2xs);
  color: var(--color-accent);
  text-decoration: none;
  transition: color var(--transition-smooth);
}

a:hover {
  color: var(--color-accent-hover);
}

button {
  font-weight: var(--font-weight-medium);
  cursor: pointer;
  transition: all var(--transition-smooth);
}

li {
  list-style: none;
  list-style-position: inside;
}

small {
  font-weight: var(--font-weight-regular);
}

label {
  display: block;
  font-size: var(--text-sm);
}

button:focus {
  outline: 2px solid var(--color-accent);
  outline-offset: 2px;
}

input, textarea {
  width: 100%;
  font-size: var(--text-xs);
  border-radius: var(--radius-sm);
 }

 hr {
  margin-top: var(--space-sm);
 }




/*=========================
           LAYOUT 
  =========================*/

  .container {
    /* === Structure === */
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 var(--space-sm);
  }


  /*=========================
          COMPONENTS
  =========================*/

  .header {
  /* === Structure === */
  padding: var(--space-xs);
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
  /* === Skin === */
  background-color: var(--color-bg);
  border-bottom: 1px solid var(--color-text-secondary);
 }

 .header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
 }

.navbar {
  /* === Structure === */
  width: 60%;
  position: absolute;
  top: 100%;
  margin-top: 0.03rem;
  right: 0;
  padding: 0 var(--space-xs);
  /* === Skin === */
  background-color: var(--color-bg);
  border-radius: var(--radius-sm);
  border-left: 1px solid var(--color-text-secondary);
  opacity: 0.9;
  /* === Behavior === */
  transform: translateX(100%);
  transition: transform var(--transition-smooth);
}

.nav-link {
  /* === Structure === */
  display: block;
  width: 100%;
  padding: var(--space-xs);
  /* Skin */
  color: var(--color-text-tertiary);
  background-color: var(--color-accent);
  margin: var(--space-sm) 0;
}

.bar {
  /* === Structure === */
  display: block;
  width: 1.2rem;
  height: 0.13rem;
  margin: 0.2rem 0;
  /* === Skin === */
  background-color: var(--color-text-primary);
  outline: 1px solid var(--color-bg);
  }

.home {
  flex-wrap: wrap;
}  

.hero-image {
  /* === Structure */
  margin: var(--space-sm) 0;
  max-width: calc(var(--space-nl) * 10);
  padding: 0 var(--space-sm);
}

.card {
  /* === Structure */
  margin-bottom: var(--space-md);
  padding: var(--space-sm);

  /* === Skin === */
  background-color: var(--color-surface);
  border-radius: var(--radius-md);
  box-shadow: 0 4px 4px rgba(0,0,0,0.1);
}

.cert-container {
  /* Structure */
  overflow-x: auto;
  scroll-snap-type: x mandatory; 
  margin: auto;
}

.cert-card {
  /* Structure */
  scroll-snap-align: start;
}

.l-border {
  /* Structure */
  padding: var(--space-xs);
  margin: var(--space-sm) 0;

  /* Skin */
  border-left: 2px solid var(--color-accent);
  border-radius: 6px;
  background-color: var(--color-surface);
  color: var(--color-text-primary)
}

.note {
  background-color: var(--color-bg);
  outline: 1px solid var(--color-accent);
  text-align: center;
  margin-left: var(--text-sm);
}

.project {
  flex-direction: column;
  height: 100%;
}

.project-description {
  flex-direction: column;
  flex-grow: 1;
}

.link-btn {
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
  margin-top: auto;
}

.inner-link-btn {
  padding: var(--space-xs);
  width: 100%;
  justify-content: space-between;
  align-items: center; 
  gap: var(--space-sm);
}

.prjt-status {
  margin-bottom: var(--space-md);
  padding: var(--space-2xs) var(--space-md);
  background-color: var(--color-p);
}

.t-done {
  background-color: var(--color-h);
}

.project-btn.left {
  background-color: var(--color-bg);
}

.project-btn.left:hover {
  background-color: var(--color-accent);
  color: var(--color-text-tertiary);
}

.project-btn.right {
  background-color: var(--color-accent);
  color: var(--color-text-tertiary);
}

.project-btn.right:hover {
  background-color: var(--color-bg);
  color: var(--color-accent);
}

.project-btn {
  display: inline-block;
  border: 1px solid var(--color-accent);
  text-align: center;
  padding: var(--space-1xs) calc(var(--space-sm) + var(--space-1xs));
  font-size: var(--text-sm);
  border-radius: var(--radius-sm);
}

.form-container {
  padding-top: var(--space-md);
}

.contact-form {
  padding: var(--space-sm);
  /* skin */
  background-color: var(--color-surface);
  border-radius: var(--radius-sm);
  box-shadow: 0 2px 17px 4px rgba(0,0,0,0.1);
}

.input-field {
  padding: var(--space-xs);
  margin-bottom: var(--space-xs);
}

.input-field:focus {
border: 1px solid var(--color-accent);
outline: none;
}

.input-field:hover {
  box-shadow: 0 0 2px var(--color-accent-hover);
}

.form-btn {
  /* Structure */
  width: 40%;
  padding: var(--space-1xs);
  font-size: var(--text-sm);
  /* Skin */
  border: 1px solid var(--color-accent);
  border-radius: var(--radius-sm);
  background-color: var(--color-bg);
  /* Behavior */
  transition: background-color var(--transition-smooth),  color var(--transition-smooth);
}

.form-btn:hover {
  /* Skin */
  color: var(--color-text-tertiary);
  background-color: var(--color-accent-hover);
}

.form-btn:active {
  /* Skin */
  outline: none;
  /* Behavior */
  transform: scale(0.96);
}

.res-container {
  /* Structure */
  gap: var(--space-nl);
  flex-wrap: wrap;
}

.turorial-list, 
.ai-list {
  /* Structure */
  padding: var(--space-sm);
}

.list-heading {
  /* Structure */
  margin-bottom: var(--space-xs);
}

.footer-container {
  /* === structure === */
  flex-wrap: wrap;
  gap: var(--space-sm);  
}

.social-media {
  /* === Structure === */
  gap: var(--space-nl);
  flex-wrap: wrap;
}

.s-link {
  /* === structure === */
  font-size: var(--text-lg);  
}

.copy-right {
  /* Skin */
    font-size: var(--text-xs);
  }


  /*=========================
          UTILITIES
  =========================*/

.show-menu {
  transform: translateX(0);
}

.text-center {
  text-align: center;
}

.text-bold {
  font-weight: var(--font-weight-bold);
}

.d-block {
  display: block;
}

.d-none {
  display: none;
}

.d-ib {
  display: inline-block;
}

.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.h-full {
  height: auto;
}

.d-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
  gap: var(--space-md);
}

  /*=========================
          MEDIA QUERIES
  =========================*/

  @media (min-width: 576px) {


  .navbar {
      /* === structure === */
      width: 100%;
      margin-top: 0.04rem; 
      /* Skin */
      border-bottom: 1px solid var(--color-accent);
      /* Behavior */
      transform: translateX(0);
    }

  .nav-items {
        /* Structure */
        display: flex;
        justify-content: flex-end;
        align-items: center;
        /* Skin */
        border: none;
      }

  .nav-link {
        background-color: var(--color-bg);
        color: var(--color-accent);
        margin: 0;
      }

  .nav-link:hover {
        /* Skin */
        text-decoration: underline;
        text-underline-offset: var(--space-1xs);
      }

  .hamburger-menu {
        /* Structure */
        display: none;
      }

  .section {
        scroll-margin-top: var(--space-2xl);
      }

  .section, .aside {
        /* structure */
      margin: 0 auto;
      margin-top: var(--space-xl);
    }

  .home {
        /* Structure */
        padding-top: var(--space-xl);
        flex-wrap: nowrap;
        gap: var(--space-lg);
      }

  .hero-image {
        /* Skin */
        border-radius: 50%;
      }

  .catalyst {
        /* Structure */
    flex-wrap: nowrap;
    gap: var(--space-nl);
  }

  .catalyst-image {
    /* Skin */
      width: 60%;
    }

  .cert-container {
    /* Structure */
      max-width: 20rem;
    }

    .form-container {
      /* Structure */
      max-width: 50%;
      margin: 0 auto;
    }
    .res-container {
      /* Structure */
  gap: var(--space-2xl);
}

    }



@media (min-width: 768px) {

  .hamburger-menu {
    /* Structure */
    display: none;
  }

   .nav-items {
    border: none;
  }

  .nav-link:hover {
    /* Skin */
    text-decoration: underline;
    text-underline-offset: 3px;
    text-decoration-color: var(--color-accent-hover);
  }

  .section {
    scroll-margin-top: var(--space-2xl);
  }

  .section, aside {
    /* Structure */
    max-width: 90%;
  }

}

@media (min-width: 1200px) {

  .header {
    padding: var(--space-sm) 0;
  }
 
  .navbar {
    /* Structure */
    position: static;
    width: auto;
    /* Skin */
    border: none;
  }

  .nav-item {
    padding: 0 var(--space-xs);
  }

  .nav-link {
    /* === structure === */
    padding: 0 var(--space-xs);
    display: inline-block;
    /* === Skin === */
    box-shadow: 0 0 0 0.5px var(--color-accent);
    border-radius: var(--radius-md);
    /* === Behavior === */
    transition: background-color var(--transition-smooth), box-shadow var(--transition-smooth);
  }

  .nav-link:hover {
    /* === Skin === */
     background-color: var(--color-accent);
     color: var(--color-bg);
     text-decoration: none;
    /* === Behavior === */ 
  }

  .nav-link:active {
    /* Skin */
    transform: translateY(-1px);
  }

  .section {
    /* Structure */
    scroll-margin-top: calc(var(--space-lg) + var(--space-sm));
  }

  .form-container {
    max-width: 40%;
  }

}

  

  

 

